2006-03-16  Marc Singer  <elf@buici.com>

	* src/mach-lh7a40x/freq: Perl script that aids in finding clock
	frequency dividers.

	* src/mach-lh7a40x/Kconfig: Added more overclocking frequencies to
	the lh7a40x configuration.

	* Brought Kconfig sources up to date.

2006-03-15  Marc Singer  <elf@buici.com>

	* Makefile: 1.3.20

	* src/mach-lh7a40x/initialize.c: Adjusted the SMC controller
	timing setup to be sensitive to HCLK as configured.

	* src/mach-lh7a40x/lh7a40x.h: Kconfig selectable operating
	frequencies.

	* Adding support for new architecture, s3c2410, and new machine
	m7200.

2006-03-02  Marc Singer  <elf@buici.com>

	* Makefile: 1.3.19

	* src/mach-lh7952x/lh79524.h (RCPC_CPUCLKPRE_V): Added support for
	faster clocking of the LH79524.  It isn't, yet, compatible with
	the Linux kernel.  However, this may help someone who is looking
	for a little more speed.

	* src/mach-lh7a40x/initialize.c (target_init): Added support for
	the LPD7A404-10, PN 80000258, USB_PWR_EN.  The sense of this line
	changed between the -10 and the -11 releases of the LPD7A404
	CardEngine.

2006-02-23  Marc Singer  <elf@buici.com>

	* Makefile: 1.3.18

	* src/mach-lh7952x/init-lpd79524.c: Tighetened the CF region
	timing as is done for the other targets.
 
	* src/mach-lh7952x/init-lpd79520.c: Adjusted to the CompactFlash
	region timing to meet the CF spec.

	* src/mach-lh7a40x/initialize.c (SMC_BCR6_V): Tightened the CF
	region timing to be closer to the specified minimums.  The
	original WST1 delay was 320ns which may interfere with the LCD
	controller FIFO.

2006-02-22  Marc Singer  <elf@buici.com>

	* src/mach-lh7a40x/initialize.c (SMC_BCR1_V): Tightened the
	IOBARRIER region timing to see if we can get access to NOR flash
	without causing display flicker.

2006-02-17  Marc Singer  <elf@buici.com>

	* src/lib/zlib-heap.c (CB_HEAP): Increased the size of the heap so
	I can decompress very large PNG images.

	* Makefile:  1.3.17
