@@ -1,3 +1,9 @@
+2006-03-22  Marc Singer  <elf@buici.com>
+
+	* src/drivers/drv-ext2.c (ext2_find_inode): Fixed the computation
+	of the first block where the group descriptors are found.  This
+	allows APEX to read cards with block sizes other than 1K.
+
 2006-03-16  Marc Singer  <elf@buici.com>
 
 	* src/mach-lh7a40x/freq: Perl script that aids in finding clock
